@@ -2,7 +2,7 @@
 
 __revision__ = '$Id$'
 
-# Copyright (c) 2006-2007 Michael Jahn
+# Copyright (c) 2006-2010 Michael Jahn
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -28,38 +28,45 @@ import re
 
 plugin_name = "FilmeVonA-Z.de"
 plugin_description = "FILMEvonA-Z.de"
-plugin_url = "www.filmevona-z.de"
+plugin_url = "www.zweitausendeins.de"
 plugin_language = _("German")
 plugin_author = "Michael Jahn"
 plugin_author_email = "<mikej06@hotmail.com>"
-plugin_version = "1.3"
+plugin_version = "1.4"
 
 class Plugin(movie.Movie):
     def __init__(self, id):
-        self.encode='utf-8'
+        self.encode = 'utf-8'
         self.movie_id = id
-        self.url = 'http://www.filmevona-z.de/filmsuche.cfm?sucheNach=Titel&wert=' + str(self.movie_id)
+        self.url = 'http://www.zweitausendeins.de/filmlexikon/?sucheNach=titel&wert=' + str(self.movie_id)
+
+    def initialize(self):
+        url = 'http://www.zweitausendeins.de/getimage/?imageNo=0&movieNo=' + str(self.movie_id)
+        self.imagelinks = self.open_page(self.parent_window, url=url)
 
     def get_image(self):
-        self.image_url = gutils.trim(self.page, 'ProductCover=', '"')
-        if not self.image_url == '':
-            self.image_url = "http://www.filmevona-z.de/" + self.image_url
+        if string.find(self.imagelinks, '|') > 0:
+            self.image_url = gutils.before(self.imagelinks, '|')
 
     def get_o_title(self):
-        self.o_title = string.capwords(
-            gutils.clean(gutils.after(
-            gutils.regextrim(self.page, '"[ \t]+class="text_ergebniss_titel"', '[ \t]+[(]Originaltitel[)]'), '</a>')))
+        self.o_title = gutils.clean(gutils.after(
+            gutils.regextrim(self.page, 'class="text_ergebniss_faz_3"', '[ \t]+[(]Originaltitel[)]'), '</a>'))
+        p1 = string.rfind(self.o_title, ',')
+        if p1 > 0:
+            self.o_title = self.o_title[p1 + 1:]
+        self.o_title = string.capwords(self.o_title)
         if self.o_title == '':
-            self.o_title = gutils.after(gutils.trim(self.page, 'sucheNach=titel', '</a>'), '>')
+            self.o_title = gutils.after(gutils.trim(self.page, 'class="text_ergebniss_faz_3"', '</a>'), '>')
 
     def get_title(self):
-        self.title = gutils.after(gutils.trim(self.page, 'sucheNach=titel', '</a>'), '>')
+        self.title = gutils.after(gutils.trim(self.page, 'class="text_ergebniss_faz_3"', '</a>'), '>')
 
     def get_director(self):
-        self.director = gutils.after(gutils.trim(self.page, '(Regie)', '</a>'), '>')
+        self.director = gutils.after(gutils.trim(self.page, '(Regie)', '</span>'), '>')
+        self.director = re.sub(',[ ]*$', '', self.director)
 
     def get_plot(self):
-        self.plot = gutils.after(gutils.regextrim(self.page, '[(]Darsteller[)]', '</[pP]>'), '<p>')
+        self.plot = gutils.after(gutils.trim(self.page, 'Inhalt des Films:', '</td>'), '</div>')
 
     def get_year(self):
         self.year = gutils.after(gutils.trim(self.page, 'sucheNach=produktionsjahr', '</a>'), '>')
@@ -79,80 +86,88 @@ class Plugin(movie.Movie):
                     self.delimiter = ", "
 
     def get_cast(self):
-        self.cast = gutils.regextrim(self.page, '[(]Darsteller[)]', '(<[pP]>|<br><span[^>]+>)')
+        self.cast = gutils.regextrim(self.page, '[(]Darsteller[)]', '(</td>|<br><span[^>]+>)')
         self.cast = gutils.clean(self.cast)
         self.cast = self.cast.replace(' als ', _(' as '))
         self.cast = re.sub('( \t|\t|\r|\n)', '', self.cast)
-        self.cast = self.cast.replace(', ', '\n')
-        self.cast = self.cast.replace(',', '')
+        self.cast = self.cast.replace(',', '\n')
 
     def get_classification(self):
         self.classification = gutils.regextrim(self.page, 'FSK:[ ]+', '[,;]')
 
     def get_studio(self):
-        self.studio = gutils.after(gutils.trim(self.page, 'sucheNach=produktionsfirma', '</a>'), '>')
+        self.studio = gutils.after(gutils.trim(self.page, 'sucheNach=produktionsfirma', '</span>'), '>')
+        self.studio = string.replace(self.studio, '/', ',')
+        self.studio = re.sub(',[ ]*$', '', self.studio)
 
     def get_o_site(self):
         self.o_site = ''
 
     def get_site(self):
-        self.site = 'http://www.filmevona-z.de/filmsuche.cfm?sucheNach=Titel&wert=' + self.movie_id;
+        self.site = self.url
 
     def get_trailer(self):
         self.trailer = ''
 
     def get_country(self):
-        self.country = gutils.after(gutils.trim(self.page, 'sucheNach=produktionsland', '</a>'), '>')
+        self.country = gutils.after(gutils.trim(self.page, 'sucheNach=produktionsland', '</span>'), '>')
+        self.country = re.sub(',[ ]*$', '', self.country)
+        self.country = string.replace(self.country, '/', ',')
 
     def get_rating(self):
         self.rating = 0
 
+    def get_screenplay(self):
+        self.screenplay = gutils.trim(self.page, '(Drehbuch)', '</span>')
+        self.screenplay = re.sub(',[ ]*$', '', self.screenplay)
+
+    def get_cameraman(self):
+        self.cameraman = gutils.trim(self.page, '(Kamera)', '</span>')
+        self.cameraman = re.sub(',[ ]*$', '', self.cameraman)
+
 class SearchPlugin(movie.SearchMovie):
     def __init__(self):
-        self.original_url_search    = "http://www.filmevona-z.de/filmsuche.cfm?sucheNach=Titel&wert="
-        self.translated_url_search    = "http://www.filmevona-z.de/filmsuche.cfm?sucheNach=Titel&wert="
-        self.encode='utf-8'
+        self.original_url_search = "http://www.zweitausendeins.de/filmlexikon/?sucheNach=Titel&wert="
+        self.translated_url_search = "http://www.zweitausendeins.de/filmlexikon/?sucheNach=Titel&wert="
+        self.encode = 'utf-8'
 
     def search(self,parent_window):
         if not self.open_search(parent_window):
             return None
         # used for looking for subpages
-        tmp_page = gutils.trim(self.page, "Treffer-Seite", "chste Seite")
-        elements = string.split(tmp_page, '" class="text_navi">')
+        tmp_page = gutils.trim(self.page, '<span class="trefferliste">', '</span>')
+        elements = string.split(tmp_page, 'cp=')
         # first results
-        tmp_page = gutils.after(gutils.trim(self.page,"Alle Treffer aus der Kategorie", "Treffer-Seite"), "Titel:")
+        tmp_page = gutils.after(gutils.trim(self.page, 'Alle Treffer aus der Kategorie', '<span class="trefferliste">'), "Titel:")
         # look for subpages
         for element in elements:
-            element = gutils.before(element, "</a>")
+            element = gutils.before(element, '"')
             try:
                 tmp_element = int(element)
             except:
                 tmp_element = 1
             if tmp_element != 1:
-                self.url = "http://www.filmevona-z.de/filmsuche.cfm?sucheNach=Titel&currentPage=" + str(tmp_element) + "&wert="
-                self.open_search(parent_window)
+                self.url = 'http://www.zweitausendeins.de/filmlexikon/?sucheNach=Titel&cp=' + str(tmp_element) + "&wert="
                 if self.open_search(parent_window):
-                    tmp_page2 = gutils.trim(self.page,"Alle Treffer aus der Kategorie", "Treffer-Seite")
+                    tmp_page2 = gutils.trim(self.page, 'Alle Treffer aus der Kategorie', '<span class="trefferliste">')
                     tmp_page = tmp_page + tmp_page2
         self.page = tmp_page
 
         return self.page
 
     def get_searches(self):
-        elements = string.split(self.page,'class="text_ergebniss_titel"')
-        i = 0
-        while i < len(elements) - 1:
-            id_part = elements[i]
+        elements = string.split(self.page, '<div class="text_ergebniss_faz_3"')
+        i = 1
+        while i < len(elements):
+            element = elements[i]
             i = i + 1
-            text_part = elements[i]
-            i = i + 1
-            self.ids.append(gutils.trim(id_part, 'filmsuche.cfm?wert=', '&'))
-            self.titles.append(gutils.strip_tags(
-                        gutils.trim(text_part, '>', '</a>') + ' (' +
-                        string.capwords(gutils.trim(text_part, '</a>', '(Originaltitel)')) + ', ' +
-                        gutils.after(gutils.trim(text_part, 'sucheNach=produktionsland', '</a>'), '>') + ', ' +
-                        gutils.after(gutils.trim(text_part, 'sucheNach=produktionsjahr', '</a>'), '>') +
-                        ')'))
+            self.ids.append(gutils.trim(element, 'filmlexikon/?wert=', '&'))
+            self.titles.append(string.strip(gutils.clean(
+                        gutils.trim(element, '>', '</a>') + ' (' +
+                        string.capwords(gutils.trim(element, '</a>', '(Originaltitel)')) + ', ' +
+                        gutils.after(gutils.trim(element, 'sucheNach=produktionsland', '</a>'), '>') + ', ' +
+                        gutils.after(gutils.trim(element, 'sucheNach=produktionsjahr', '</a>'), '>') +
+                        ')')))
 
 #
 # Plugin Test
@@ -163,9 +178,9 @@ class SearchPluginTest(SearchPlugin):
     # dict { movie_id -> [ expected result count for original url, expected result count for translated url ] }
     #
     test_configuration = {
-        'Rocky Balboa'            : [ 1, 1 ],
-        'Arahan'                : [ 1, 1 ],
-        'Ein glückliches Jahr'    : [ 0, 0 ]
+        'Rocky'                : [ 15, 15 ],
+        'Arahan'               : [ 1, 1 ],
+        'Ein glückliches Jahr' : [ 0, 0 ]
     }
 
 class PluginTest:
