@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-07-15  Michael Jahn
+	* updated movie plugin FilmeVonA-Z
+
 2010-07-14  Michael Jahn
 	* updated movie plugin AniDB
 
